2009-07-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: don't try to finish the z_stream if it has not been
	used. This fixes all the tests after the latest change.

2009-07-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Makefile.am: replaced zlib_macros.c with zlib-helper.c
	* zlib_macros.c: Removed file.
	* zlib-helper.c: new interface for DeflateStream. Flush() actually
	does something.

2009-04-13  Jonathan Pryor  <jpryor@novell.com>

	* sys-time.c: Properly set the modification time, instead of using the
	  access time as the modification time.  Fixes #494253.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* x-struct-str.c: It's possible for struct members to be NULL, so make 
	  sure we don't pass NULL to strlen(3).

2009-02-20  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush (adds Mono_Unix_UnixSignal_SignalInfo::pipecnt, removes
	  functions no longer declared within Mono.Posix.dll).
	* signal.c: Allow Mono_Unix_UnixSignal_WaitAny() to be called 
	  concurrently from multiple threads w/o blocking each thread;
	  previously, calls to Mono_Unix_UnixSignal_WaitAny() would block
	  until the previous call completed.  This required restructuring
	  Mono_Unix_UnixSignal_SignalInfo to hold a ref-counted
	  read_fd/write_fd pair (instead of allocating & releasing within
	  _WaitAny()) so that the pipes could be "shared" between threads.
	  Patch thanks to tim.jenks@realtimeworlds.com.

2009-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* minizip/zip.c: Fix warnings about old-style paramater type
	specifications.

	* minizip/unzip.c Fix warnings about old-style paramater type
	specifications.
	(unzlocal_DosDateToTmuDate): Fix ambiguous else's.
	(unzlocal_DosDateToTmuDate): Here too.
	(unzlocal_CheckCurrentFileCoherencyHeader): And here.

	* old-map.c: Added prototypes to silence compile warnings. Looks
	like this file is supposed to be autogenerated, so probably not
	the right fix but I can't find the autogen script.
