@@ -1,5 +1,9 @@
 2009-07-21 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
+	* zlib-helper.c: use glib for malloc/free.
+
+2009-07-21 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
 	* zlib-helper.c: don't try to finish the z_stream if it has not been
 	used. This fixes all the tests after the latest change.
 
